fixed mailing list size and alignment

--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -294,8 +294,8 @@ A.links3:active {text-decoration: none; color: #222222;}
   text-align: center;
   text-transform: uppercase;
   margin: auto;
-  min-width: 20%;
-  width: 20%;
+  min-width: 25%;
+  width: 25%;
 }  
 
 .about-photo{
